# orbis

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
orbis-pfs/: Cargo.toml  README.md
orbis-pfs/src/: file.rs  header.rs  image.rs  inode.rs  lib.rs  pfsc.rs
orbis-pfs/src/directory/: dirent.rs  mod.rs
orbis-pkg/: Cargo.toml  README.md
orbis-pkg-fuse/: Cargo.toml
orbis-pkg-util/: Cargo.toml  README.md
orbis-pkg-util/src/: cli.rs  lib.rs  main.rs  progress.rs
orbis-pkg-util/src/extract/: error.rs  mod.rs
orbis-pkg/src/: entry.rs  header.rs  keys.rs  lib.rs
