[workspace]
resolver = "3"
members = ["orbis-pfs", "orbis-pkg", "orbis-pkg-fuse", "orbis-pkg-util"]

[workspace.package]
authors = ["videobitva"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/videobitva/orbis"
homepage = "https://github.com/videobitva/orbis"

[workspace.dependencies]
aes = { version = "0.8.4" }
sha2 = { version = "0.10.9" }
snafu = { version = "0.8.9" }
zerocopy = { version = "0.8.38" }

orbis-pfs = { version = "0.1.0", path = "orbis-pfs" }
orbis-pkg = { version = "0.1.0", path = "orbis-pkg" }
orbis-pkg-util = { version = "0.1.0", path = "orbis-pkg-util" }
