[package]
name = "orbis-pkg-fuse"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fuser = "0.16.0"
clap = { version = "4.5", features = ["derive"] }
orbis-pkg.workspace = true
orbis-pfs.workspace = true
snafu.workspace = true