[package]
name = "orbis-pkg"
version = "0.1.0"
edition = "2024"
description = "Library for parsing and extracting PlayStation 4 PKG files"
readme = "README.md"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/orbis-pkg"
keywords = ["ps4", "playstation", "pkg", "package", "orbis"]
categories = ["parser-implementations", "cryptography"]

[dependencies]
aes.workspace = true
bitflags = "2.10.0"
byteorder = "1.4.3"
cbc = "0.1"
rsa = "0.9"
sha2.workspace = true
snafu.workspace = true
zerocopy = { workspace = true, features = ["derive", "simd"] }
